// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Helpers/Colors Background Color 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    div.demo {
        display: flex;
        height: 4rem;
        width: 8rem;
    }

  </style>
  


  <h3>
    sapBrandColor
  </h3>
  

  <div
    class="demo sap-background-color-sapBrandColor"
  />
  

  <br />
  

  <h3>
    sapErrorBackground
  </h3>
  

  <div
    class="demo sap-background-color-sapErrorBackground"
  />
  

  <br />
  

  <h3>
    sapWarningBackground
  </h3>
  

  <div
    class="demo sap-background-color-sapWarningBackground"
  />
  

  <br />
  

  <h3>
    sapSuccessBackground
  </h3>
  

  <div
    class="demo sap-background-color-sapSuccessBackground"
  />
  

  <br />
  

  <h3>
    sapInformationBackground
  </h3>
  

  <div
    class="demo sap-background-color-sapInformationBackground"
  />
  

  <br />
  

  <h3>
    sapNeutralBackground
  </h3>
  

  <div
    class="demo sap-background-color-sapNeutralBackground"
  />
  

</div>
`;

exports[`Storyshots Helpers/Colors Text Color 1`] = `
<div
  dir="ltr"
>
  

  <style>
    
    div.demo {
        display: flex;
        height: 4rem;
        width: 8rem;
    }

  </style>
  


  <h3>
    sapBrandColor
  </h3>
  

  <div
    class="sap-color-sapBrandColor"
  >
    TEXT
  </div>
  

  <br />
  

  <h3>
    sapPositiveTextColor
  </h3>
  

  <div
    class="sap-color-sapPositiveTextColor"
  >
    TEXT
  </div>
  

  <br />
  

  <h3>
    sapCriticalTextColor
  </h3>
  

  <div
    class="sap-color-sapCriticalTextColor"
  >
    TEXT
  </div>
  

  <br />
  

  <h3>
    sapNegativeTextColor
  </h3>
  

  <div
    class="sap-color-sapNegativeTextColor"
  >
    TEXT
  </div>
  

  <br />
  

  <h3>
    sapInformativeTextColor
  </h3>
  

  <div
    class="sap-color-sapInformativeTextColor"
  >
    TEXT
  </div>
  

  <br />
  

  <h3>
    sapNeutralTextColor
  </h3>
  

  <div
    class="sap-color-sapNeutralTextColor"
  >
    TEXT
  </div>
  

</div>
`;
